# anuga_drainage

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: conda-env.yml  pip-macos.yml  pip.yml  tests.yml
archive/pyswmm_with_openings/: README.md
docs/: _make_tutorial.py  api.md  conf.py  coupling.md  diagnostics.md  hydrographs.md  index.md  inlet_catalogue.md  inp_format.md  installation.md  quickstart.md  requirements.txt  tutorial.ipynb  tutorial.py
examples/culvert_example/: run_pipedream_culvert.py
examples/real_example/: real_example.ipynb  run_from_inp.py  run_pipedream.py  run_swmm.py
examples/simple_culvert_example/: run_from_inp.py  run_pipedream.py  run_swmm_long.py  run_swmm_short.py  swmm_input_short.inp
examples/yshape/: 2inlets_short.inp  run_pipedream.py  run_swmm.py
src/anuga_drainage/: __init__.py  coupler.py  coupling.py  factory.py  hydrograph.py  inlet_catalogue.py  inlet_initialization.py  inp.py  viewer.py  volume_balance.py
tests/: test_calculate_Q.py  test_coupler.py  test_factory.py  test_hydrograph.py  test_inlet_catalogue.py  test_inlet_geometry.py  test_inp.py  test_read_inp_coordinates.py  test_viewer.py  test_volume_balance.py
